Refactor book structure and content; add new chapters and update formatting. Replace CH01.qmd with new chapters CH02.qmd, CH03.qmd, and CH04.qmd. Update preamble.tex for font adjustments and layout changes. Revise index.qmd to enhance introductory text and remove outdated content. Update README for clarity on prerequisites.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -58,7 +58,12 @@ book:
     site: "@konsensusn"
   chapters:
     - index.qmd
-    - chapters/CH01.qmd
+    - chapters/ch01.qmd
+    - chapters/ch02.qmd
+    - part: Part 2
+      chapters:
+        - chapters/ch03.qmd
+        - chapters/ch04.qmd
 
 format:
   html:
