--- a/_variables.yml
+++ b/_variables.yml
@@ -12,3 +12,4 @@ isbnhc: 978-1-234-56789-0
 isbnsc: 978-1-234-56789-1
 isbnebook: 978-1-234-56789-2
 press: Konsensus Network
+productid: 14682916651357
